--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -9,4 +9,4 @@
   background-color: #282c34;
   min-height: 100vh;
   color: white;
-}
+} */
