--- a/src/components/css/table.css
+++ b/src/components/css/table.css
@@ -1,7 +1,3 @@
-table{
-  display: flex;
-  justify-content: center;
-}
 .flagSize{
   width: 30px;
 }
@@ -34,7 +30,6 @@ td, th {
   background-color: #f2f2f2;
   padding: 20px;
   margin: 0 auto;
-
 }
 input[type=text], select {
   max-width: 100%;
@@ -63,7 +58,9 @@ input[type=number] {
   grid-column-start: 2;
   grid-column-end: 3;
 }
-
+.height{
+  height: 50px;
+}
 .btnEdit{
   grid-column-start: 8;
   grid-column-end: 9;
