changed positions, added Admin pages & removed few warnings

--- a/src/components/css/table.css
+++ b/src/components/css/table.css
@@ -164,8 +164,8 @@ h4{
   align-self: center;
 }
 .image2{
-  grid-column-start: 6;
-  grid-column-end: 7;
+  grid-column-start: 7;
+  grid-column-end: 8;
   display: flex;
   justify-self: center;
   align-self: center;
@@ -175,6 +175,18 @@ h4{
   grid-column-end: 8;
   font-size: 20px;
   align-self: center;
+}
+.matchData{
+  grid-column-start: 3;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+.matchTime{
+  grid-column-start: 3;
+  grid-column-end: 6;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 
 @media (max-width: 820px){
@@ -223,6 +235,8 @@ h4{
 .image2{
   grid-row-start: 1;
   grid-row-end: 2;
+  grid-column-start: 5;
+  grid-column-end: 6;
   display: flex;
   justify-self: center;
 }
@@ -230,6 +244,18 @@ h4{
   grid-row-start: 2;
   grid-row-end: 3;
   font-size: 20px;
+}
+.matchData{
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+.matchTime{
+  grid-column-start: 2;
+  grid-column-end: 5;
+  grid-row-start: 4;
+  grid-row-end: 5;
 }
 }
 @media (max-width: 425px){
@@ -277,6 +303,8 @@ h4{
   .image2{
     grid-row-start: 1;
     grid-row-end: 2;
+    grid-column-start: 3;
+    grid-column-end: 4;
     display: flex;
     justify-self: center;
   }
@@ -286,5 +314,17 @@ h4{
     grid-row-start: 2;
     grid-row-end: 3;
     font-size: 20px;
+  }
+  .matchData{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
+  }
+  .matchTime{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 6;
   }
 }
