--- a/src/components/css/table.css
+++ b/src/components/css/table.css
@@ -1,29 +1,36 @@
-.flagSize{
+.flagSize {
   width: 30px;
 }
-.flagres{
+
+.flagres {
   width: 70%;
   border-radius: 3px;
 }
-th{
+
+th {
   background-color: rgb(243, 73, 73);
 }
-td{
+
+td {
   background-color: rgba(255, 255, 255, 0.814);
   color: black;
   font-weight: bold;
 }
-td, th {
+
+td,
+th {
   border: 1px solid #e96d6d;
   text-align: left;
   padding: 8px;
 }
-.button_dodawania{
+
+.button_dodawania {
   width: 100px;
   height: 30px;
   border-radius: 10px;
 }
-.fill{
+
+.fill {
   color: black;
   max-width: 1500px;
   border-radius: 5px;
@@ -31,7 +38,9 @@ td, th {
   padding: 20px;
   margin: 0 auto;
 }
-input[type=text], select {
+
+input[type=text],
+select {
   max-width: 100%;
   padding: 12px 20px;
   margin: 8px 8px 8px 0px;
@@ -39,6 +48,7 @@ input[type=text], select {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
 input[type=number] {
   max-width: 35px;
   height: 40px;
@@ -50,34 +60,29 @@ input[type=number] {
   margin: 15px;
   text-align: center;
 }
-.id1{
+
+.id1 {
   grid-column-start: 1;
   grid-column-end: 2;
 }
-.id2{
+
+.id2 {
   grid-column-start: 2;
   grid-column-end: 3;
 }
-.height{
+
+.height {
   height: 50px;
 }
-.btnEdit{
-  grid-column-start: 8;
-  grid-column-end: 9;
-  margin: 10px;
-  padding: 10px;
-  height: 40px;
-  border-radius: 6px;
-  background-color: #d3bc07;
-  align-self: center;
-}
+
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-.button_dodawania{
+
+.button_dodawania {
   border: 0;
   outline: 0;
   cursor: pointer;
@@ -90,13 +95,15 @@ input::-webkit-inner-spin-button {
   padding: 4px 8px;
   display: inline-block;
   min-height: 28px;
-  transition: background-color .24s,box-shadow .24s;
+  transition: background-color .24s, box-shadow .24s;
   margin: 10px;
 }
+
 .button_dodawania:hover {
   box-shadow: rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(0 0 0 / 12%) 0px 1px 1px 0px, rgb(60 66 87 / 16%) 0px 0px 0px 1px, rgb(0 0 0 / 0%) 0px 0px 0px 0px, rgb(60 66 87 / 8%) 0px 3px 9px 0px, rgb(60 66 87 / 8%) 0px 2px 5px 0px;
 }
-.button_zatwierdz{
+
+.button_zatwierdz {
   margin: 10px;
   display: inline-block;
   outline: 0;
@@ -115,16 +122,18 @@ input::-webkit-inner-spin-button {
   transition: 0.2s cubic-bezier(0.3, 0, 0.5, 1);
   transition-property: color, background-color, border-color;
 }
-  .button_zatwierdz:hover {
-      background-color: #2c974b;
-      border-color: #1b1f2326;
-      transition-duration: 0.1s;
-  }
 
-h4{
+.button_zatwierdz:hover {
+  background-color: #2c974b;
+  border-color: #1b1f2326;
+  transition-duration: 0.1s;
+}
+
+h4 {
   margin: 2%;
 }
-.wyniki{
+
+.wyniki {
   background-color: #3c3b3a;
   color: white;
   margin: 0 auto;
@@ -133,174 +142,201 @@ h4{
   display: grid;
   grid-template-columns: 1fr 2fr 80px 15px 80px 2fr 1fr;
 }
-.empty{
+
+.empty {
   grid-row-start: 2;
   grid-row-end: 3;
 }
-.image1{
+
+.image1 {
   display: flex;
   justify-self: center;
   align-self: center;
 }
-.text1{
+
+.text1 {
   font-size: 20px;
   align-self: center;
 }
-.number1{
+
+.number1 {
   grid-column-start: 3;
   grid-column-end: 4;
   justify-self: center;
   align-self: center;
 }
-.vs{
+
+.vs {
   grid-column-start: 4;
   grid-column-end: 5;
   align-self: center;
 }
-.number2{
+
+.number2 {
   grid-column-start: 5;
   grid-column-end: 6;
   justify-self: center;
   align-self: center;
 }
-.image2{
+
+.image2 {
   grid-column-start: 7;
   grid-column-end: 8;
   display: flex;
   justify-self: center;
   align-self: center;
 }
-.text2{
+
+.text2 {
   grid-column-start: 7;
   grid-column-end: 8;
   font-size: 20px;
   align-self: center;
 }
-.matchData{
+
+.matchData {
   grid-column-start: 3;
   grid-column-end: 6;
   grid-row-start: 3;
   grid-row-end: 4;
 }
-.matchTime{
+
+.matchTime {
   grid-column-start: 3;
   grid-column-end: 6;
   grid-row-start: 4;
   grid-row-end: 5;
 }
 
-@media (max-width: 820px){
-.wyniki{
-  grid-template-columns: 2fr 80px 15px 80px 2fr;
-}
-.empty{
-  grid-row-start: 2;
-  grid-row-end: 3;
-  grid-column-start: 2;
-  grid-column-end: 5;
-}
-.image1{
-  grid-row-start: 1;
-  grid-row-end: 2;
-  display: flex;
-  justify-self: center;
-}
-.text1{
-  grid-row-start: 2;
-  grid-row-end: 3;
-  font-size: 20px;
-}
-.number1{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  align-self: center;
-}
-.vs{
-  grid-column-start: 3;
-  grid-column-end: 4;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  align-self: center;
-}
-.number2{
-  grid-column-start: 4;
-  grid-column-end: 5;
-  grid-row-start: 1;
-  grid-row-end: 2;
-  align-self: center;
-}
-
-.image2{
-  grid-row-start: 1;
-  grid-row-end: 2;
-  grid-column-start: 5;
-  grid-column-end: 6;
-  display: flex;
-  justify-self: center;
-}
-.text2{
-  grid-row-start: 2;
-  grid-row-end: 3;
-  font-size: 20px;
-}
-.matchData{
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 3;
-  grid-row-end: 4;
-}
-.matchTime{
-  grid-column-start: 2;
-  grid-column-end: 5;
-  grid-row-start: 4;
-  grid-row-end: 5;
-}
-}
-@media (max-width: 425px){
-  .wyniki{
-    grid-template-columns: 1fr 15px 1fr;
+@media (max-width: 820px) {
+  .wyniki {
+    grid-template-columns: 2fr 80px 15px 80px 2fr;
   }
-  .empty{
-    grid-row-start: 1;
+
+  .empty {
+    grid-row-start: 2;
     grid-row-end: 3;
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 5;
   }
-  .image1{
+
+  .image1 {
     grid-row-start: 1;
     grid-row-end: 2;
     display: flex;
     justify-self: center;
   }
-  .text1{
+
+  .text1 {
     grid-row-start: 2;
     grid-row-end: 3;
     font-size: 20px;
   }
-  .number1{
+
+  .number1 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    align-self: center;
+  }
+
+  .vs {
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    align-self: center;
+  }
+
+  .number2 {
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    align-self: center;
+  }
+
+  .image2 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    display: flex;
+    justify-self: center;
+  }
+
+  .text2 {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 20px;
+  }
+
+  .matchData {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 4;
+  }
+
+  .matchTime {
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 4;
+    grid-row-end: 5;
+  }
+}
+
+@media (max-width: 425px) {
+  .wyniki {
+    grid-template-columns: 1fr 15px 1fr;
+  }
+
+  .empty {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+
+  .image1 {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    display: flex;
+    justify-self: center;
+  }
+
+  .text1 {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    font-size: 20px;
+  }
+
+  .number1 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
     justify-self: center;
   }
-  .vs{
+
+  .vs {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
     align-self: center;
   }
-  .number2{
+
+  .number2 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
     justify-self: center;
   }
-  .image2{
+
+  .image2 {
     grid-row-start: 1;
     grid-row-end: 2;
     grid-column-start: 3;
@@ -308,20 +344,23 @@ h4{
     display: flex;
     justify-self: center;
   }
-  .text2{
+
+  .text2 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
     font-size: 20px;
   }
-  .matchData{
+
+  .matchData {
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 4;
     grid-row-end: 5;
   }
-  .matchTime{
+
+  .matchTime {
     grid-column-start: 1;
     grid-column-end: 4;
     grid-row-start: 5;
