--- a/src/components/Admin/Matches/match.css
+++ b/src/components/Admin/Matches/match.css
@@ -54,30 +54,57 @@
     color: white;
 }
 
+.grid {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    z-index: 1;
+}
+
+.lighter {
+    color: black;
+    font-weight: bolder;
+    text-shadow: 0px 0px 8px rgb(255, 255, 255);
+}
+
+.flg1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    z-index: 1;
+    font-weight: bold;
+}
+
+.flg2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    z-index: 1;
+    font-weight: bold;
+}
+
 .id1 {
-    justify-self: center;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
     border-radius: 4%;
-    height: 200px;
-    width: 300px;
+    width: 210px;
+    height: 90px;
+    opacity: 0.4;
 }
 
 .id2 {
-    justify-self: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
     border-radius: 4%;
-    height: 200px;
-    width: 300px;
-}
-
-input[type=date] {
-    height: 80px;
-    font-size: 30px;
-    border: 1px solid #ccc;
-    background-color: #3c3b3a;
-    color: #fff;
-    border-radius: 4px;
-    margin: 15px;
-    text-align: center;
-    align-self: center;
+    height: 90px;
+    width: 210px;
+    opacity: 0.4;
 }
 
 select {
@@ -102,28 +129,38 @@ select {
     grid-row-start: 3;
     grid-row-end: 4;
 }
+
 .dateAd {
     grid-column-start: 3;
     grid-column-end: 6;
     grid-row-start: 2;
     grid-row-end: 3;
 }
-.btnEdit {
-  grid-column-start: 3;
-  grid-column-end: 6;
-  grid-row-start: 4;
-  grid-row-end: 5;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 6px;
-  background-color: #d3bc07;
-  align-self: center;
-  font-size: 700;
-  color: white;
+
+.dateAdmin {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
+
+.btnEdit {
+    grid-column-start: 3;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 6px;
+    background-color: #d3bc07;
+    align-self: center;
+    font-size: 700;
+    color: white;
+}
+
 .btnDelete {
     grid-column-start: 3;
-  grid-column-end: 6;
+    grid-column-end: 6;
     grid-row-start: 5;
     grid-row-end: 6;
     margin: 10px;
@@ -133,6 +170,51 @@ select {
     align-self: center;
     font-size: 700;
     color: white;
+}
+
+.live {
+    position: relative;
+    color: #517b5d;
+    text-decoration: none;
+    padding-bottom: 2px;
+}
+
+.live:hover {
+    color: #517b5d;
+}
+
+.live::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
+    background-color: #81c995;
+    animation-name: lives;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes lives {
+    0% {
+        transform: scaleX(0);
+        transform-origin: top left;
+        transition: transform 4s ease;
+    }
+
+    50% {
+        transform: scaleX(0.25);
+        transform-origin: top center;
+        transition: transform 4s ease;
+    }
+
+    100% {
+        transform: scaleX(0);
+        transform-origin: top right;
+        transition: transform 4s ease;
+    }
 }
 
 @media (max-width:820px) {
@@ -147,18 +229,21 @@ select {
         grid-row-start: 2;
         grid-row-end: 3;
     }
+
     .dateAd {
         grid-column-start: 2;
         grid-column-end: 5;
         grid-row-start: 3;
         grid-row-end: 4;
     }
+
     .btnEdit {
         grid-column-start: 1;
         grid-column-end: 3;
         grid-row-start: 4;
         grid-row-end: 5;
     }
+
     .btnDelete {
         grid-column-start: 4;
         grid-column-end: 6;
@@ -172,28 +257,56 @@ select {
         grid-column-start: 1;
         grid-column-end: 4;
     }
+
     .timeAd {
         grid-column-start: 1;
-        grid-column-end: 4;
-        grid-row-start: 3;
-        grid-row-end: 4;
+        grid-column-end: 5;
+        grid-row-start: 4;
+        grid-row-end: 5;
     }
+
     .dateAd {
         grid-column-start: 1;
         grid-column-end: 5;
-        grid-row-start: 2;
-        grid-row-end: 5;
+        grid-row-start: 3;
+        grid-row-end: 4;
     }
+
+    .number1 {
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 5;
+        grid-row-end: 6;
+        justify-self: center;
+    }
+
+    .vs {
+        grid-column-start: 2;
+        grid-column-end: 3;
+        grid-row-start: 5;
+        grid-row-end: 6;
+        align-self: center;
+    }
+
+    .number2 {
+        grid-column-start: 3;
+        grid-column-end: 4;
+        grid-row-start: 5;
+        grid-row-end: 6;
+        justify-self: center;
+    }
+
     .btnEdit {
         grid-column-start: 1;
         grid-column-end: 3;
-        grid-row-start: 4;
-        grid-row-end: 5;
+        grid-row-start: 6;
+        grid-row-end: 7;
     }
+
     .btnDelete {
         grid-column-start: 3;
         grid-column-end: 4;
-        grid-row-start: 4;
-        grid-row-end: 5;
+        grid-row-start: 6;
+        grid-row-end: 7;
     }
 }
