--- a/src/components/css/table.css
+++ b/src/components/css/table.css
@@ -49,7 +49,7 @@ select {
   box-sizing: border-box;
 }
 
-input[type=number] {
+.numer {
   max-width: 35px;
   height: 40px;
   font-size: 30px;
@@ -188,8 +188,8 @@ h4 {
 }
 
 .text2 {
-  grid-column-start: 7;
-  grid-column-end: 8;
+  grid-column-start: 6;
+  grid-column-end: 7;
   font-size: 20px;
   align-self: center;
 }
@@ -267,6 +267,8 @@ h4 {
   }
 
   .text2 {
+    grid-column-start: 5;
+    grid-column-end: 6;
     grid-row-start: 2;
     grid-row-end: 3;
     font-size: 20px;
@@ -307,6 +309,8 @@ h4 {
   }
 
   .text1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 2;
     grid-row-end: 3;
     font-size: 20px;
