--- a/src/components/css/auth.css
+++ b/src/components/css/auth.css
@@ -1,10 +1,10 @@
-
 #msform {
 	width: 400px;
 	margin: 150px auto;
 	text-align: center;
 	position: relative;
 }
+
 #msform fieldset {
 	background: white;
 	border: 0 none;
@@ -16,10 +16,13 @@
 	margin: 0 10%;
 	position: relative;
 }
+
 #msform fieldset:not(:first-of-type) {
 	display: none;
 }
-#msform input, #msform textarea {
+
+#msform input,
+#msform textarea {
 	padding: 15px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
@@ -30,6 +33,7 @@
 	color: #2C3E50;
 	font-size: 13px;
 }
+
 #msform .action-button {
 	width: 100px;
 	background: #27AE60;
@@ -41,26 +45,32 @@
 	padding: 10px 5px;
 	margin: 10px 5px;
 }
-#msform .action-button:hover, #msform .action-button:focus {
+
+#msform .action-button:hover,
+#msform .action-button:focus {
 	box-shadow: 0 0 0 2px white, 0 0 0 3px #27AE60;
 }
+
 .fs-title {
 	font-size: 15px;
 	text-transform: uppercase;
 	color: #2C3E50;
 	margin-bottom: 10px;
 }
+
 .fs-subtitle {
 	font-weight: normal;
 	font-size: 13px;
 	color: #666;
 	margin-bottom: 20px;
 }
+
 #progressbar {
 	margin-bottom: 30px;
 	overflow: hidden;
 	counter-reset: step;
 }
+
 #progressbar li {
 	list-style-type: none;
 	color: white;
@@ -70,6 +80,7 @@
 	float: left;
 	position: relative;
 }
+
 #progressbar li:before {
 	content: counter(step);
 	counter-increment: step;
@@ -82,6 +93,7 @@
 	border-radius: 3px;
 	margin: 0 auto 5px auto;
 }
+
 #progressbar li:after {
 	content: '';
 	width: 100%;
@@ -92,10 +104,13 @@
 	top: 9px;
 	z-index: -1;
 }
+
 #progressbar li:first-child:after {
-	content: none; 
+	content: none;
 }
-#progressbar li.active:before,  #progressbar li.active:after{
+
+#progressbar li.active:before,
+#progressbar li.active:after {
 	background: #27AE60;
 	color: white;
 }
@@ -107,6 +122,7 @@
 		text-align: center;
 		position: relative;
 	}
+
 	#msform fieldset {
 		background: white;
 		border: 0 none;
