--- a/src/components/css/guess.css
+++ b/src/components/css/guess.css
@@ -1,21 +1,26 @@
 .tabela {
-    font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-  }
-  
-  .tabela td, .tabela th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  .tabela tr:nth-child(even){background-color: #f2f2f2;}
-  
-  .tabela tr:hover {background-color: #ddd;}
-  
-  .tabela th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #0491aac4;
-    color: white;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+}
+
+.tabela td,
+.tabela th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.tabela tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.tabela tr:hover {
+  background-color: #ddd;
+}
+
+.tabela th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #0491aac4;
+  color: white;
+}
