--- a/src/components/css/nav.css
+++ b/src/components/css/nav.css
@@ -1,7 +1,45 @@
-.none{
-    text-decoration: none;
-    color: rgb(9, 0, 44);
+/* nav.css */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
-.menu ul{
-    list-style-type: none;
+
+.navbar {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+}
+
+.navbar-container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.nav-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-item {
+  margin-right: 20px;
+}
+
+.profile {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
 }
