--- a/src/components/css/spinner.css
+++ b/src/components/css/spinner.css
@@ -1,17 +1,22 @@
 @keyframes spinner {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
   }
-  .loading-spinner {
-    width: 50px;
-    height: 50px;
-    border: 10px solid #f3f3f3; /* Light grey */
-    border-top: 10px solid #383636; /* Black */
-    border-radius: 50%;
-    animation: spinner 1.5s linear infinite;
+
+  100% {
+    transform: rotate(360deg);
   }
-.hover tr:hover {background-color: rgb(87, 87, 87);}
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #f3f3f3;
+  border-top: 10px solid #383636;
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.hover tr:hover {
+  background-color: rgb(87, 87, 87);
+}
